releases/v1.0.4/README.md
# Alvrion H2T Browser v1.0.4

**Release Date:** 2025-09-21 18:19:10 UTC
**Build Source:** https://github.com/anticipaterdotcom/alvrion-electron/releases/tag/v1.0.4

## Downloads

### macOS
- [Alvrion H2T Browser-1.0.0-arm64.dmg](releases/v1.0.4/)
- [Alvrion H2T Browser-1.0.0.dmg](releases/v1.0.4/)
- [Alvrion H2T Browser-1.0.0-arm64-mac.zip](releases/v1.0.4/)
- [Alvrion H2T Browser-1.0.0-mac.zip](releases/v1.0.4/)

### Windows  
- [Alvrion H2T Browser Setup 1.0.0.exe](releases/v1.0.4/)
- [Alvrion H2T Browser 1.0.0.exe](releases/v1.0.4/)

### Linux
- [Alvrion H2T Browser-1.0.0.AppImage](releases/v1.0.4/)
- [alvrion-h2t-browser_1.0.0_amd64.deb](releases/v1.0.4/)
- [alvrion-h2t-browser-1.0.0.x86_64.rpm](releases/v1.0.4/)

## Installation

1. Download the appropriate file for your platform
2. **macOS**: Open the .dmg file and drag to Applications
3. **Windows**: Run the Setup.exe installer or use the portable .exe
4. **Linux**: Make the .AppImage executable and run, or install the .deb/.rpm package

## Features
- Pure LLM-driven browser automation
- Intelligent command interpretation  
- Cross-platform compatibility
- Zero hardcoded website logic
